--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 
 }
 
-<partial name="_AlertMessage" ></partial>
+<partial name="_AlertMessage" />
 
 <div class="text-center">
     <h1 class="display-4">Hello</h1>
