--- a/Views/Shared/_MenuManagePartial.cshtml
+++ b/Views/Shared/_MenuManagePartial.cshtml
@@ -4,6 +4,7 @@
     </button>
     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <a class="dropdown-item" asp-area="Database" asp-controller="DbManage" asp-action="Index">Index</a>
-       
+
+        <a class="dropdown-item" asp-area="Contact" asp-controller="Contact" asp-action="Index">Manage Contact</a>
     </div>
 </div>
